--- a/requirements/python-requirements/requirements-report.txt
+++ b/requirements/python-requirements/requirements-report.txt
@@ -4,6 +4,19 @@
 #
 #    pip-compile requirements-report.in
 #
+asgiref==3.3.1
+    # via
+    #   channels
+    #   daphne
+attrs==20.3.0
+    # via
+    #   automat
+    #   service-identity
+    #   twisted
+autobahn==21.2.1
+    # via daphne
+automat==20.2.0
+    # via twisted
 backcall==0.1.0
     # via ipython
 beautifulsoup4==4.9.0
@@ -25,6 +38,8 @@ cffi==1.14.0
     #   -c requirements-engine.txt
     #   cryptography
     #   google-crc32c
+channels==3.0.3
+    # via -r requirements-report.in
 chardet==3.0.4
     # via
     #   -c requirements-engine.txt
@@ -33,14 +48,20 @@ colorama==0.4.3
     # via
     #   -c requirements-engine.txt
     #   -r requirements-common.in
+constantly==15.1.0
+    # via twisted
 cryptography==2.9.2
     # via
     #   -c requirements-engine.txt
+    #   autobahn
     #   josepy
     #   mozilla-django-oidc
     #   pyopenssl
     #   pysaml2
     #   requests-ntlm
+    #   service-identity
+daphne==3.0.1
+    # via channels
 decorator==4.4.2
     # via
     #   ipython
@@ -70,6 +91,7 @@ django-structlog==1.5.2
 django==2.2.18
     # via
     #   -r requirements-django.in
+    #   channels
     #   django-model-utils
     #   django-rest-auth
     #   django-settings-export
@@ -133,10 +155,18 @@ httplib2==0.18.1
     #   google-api-python-client
     #   google-auth-httplib2
     #   oauth2client
+hyperlink==21.0.0
+    # via
+    #   autobahn
+    #   twisted
 idna==2.9
     # via
     #   -c requirements-engine.txt
+    #   hyperlink
     #   requests
+    #   twisted
+incremental==21.3.0
+    # via twisted
 ipython-genutils==0.2.0
     # via traitlets
 ipython==7.14.0
@@ -210,12 +240,14 @@ pyasn1-modules==0.2.8
     #   -c requirements-engine.txt
     #   google-auth
     #   oauth2client
+    #   service-identity
 pyasn1==0.4.8
     # via
     #   -c requirements-engine.txt
     #   oauth2client
     #   pyasn1-modules
     #   rsa
+    #   service-identity
 pycparser==2.20
     # via
     #   -c requirements-engine.txt
@@ -231,6 +263,7 @@ pyopenssl==19.1.0
     # via
     #   josepy
     #   pysaml2
+    #   twisted
 pypdf2==1.26.0
     # via
     #   -c requirements-engine.txt
@@ -292,9 +325,12 @@ rsa==4.6
     #   -c requirements-engine.txt
     #   google-auth
     #   oauth2client
+service-identity==18.1.0
+    # via twisted
 six==1.14.0
     # via
     #   -c requirements-engine.txt
+    #   automat
     #   cryptography
     #   django-extensions
     #   django-rest-auth
@@ -329,6 +365,10 @@ toml==0.10.1
     #   -r requirements-common.in
 traitlets==4.3.3
     # via ipython
+twisted[tls]==21.2.0
+    # via daphne
+txaio==21.2.1
+    # via autobahn
 tzlocal==2.0.0
     # via
     #   -c requirements-engine.txt
@@ -347,6 +387,8 @@ whitenoise==5.2.0
     # via -r requirements-django.in
 xmlsec==1.3.3
     # via python3-saml
+zope.interface==5.3.0
+    # via twisted
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
