[#38478] Add organization app with data model

--- a/dev-environment/admin/dev-settings.toml
+++ b/dev-environment/admin/dev-settings.toml
@@ -16,7 +16,8 @@ SESSION_COOKIE_NAME = "admin_sessionid"
 # [installation]
 OPTIONAL_APPS = [
     'django_extensions',
-    'os2datascanner.projects.admin.core'
+    'os2datascanner.projects.admin.core',
+    'os2datascanner.projects.admin.organizations',
 ]
 
 # [scans]
