--- a/dev-environment/admin/dev-settings.toml
+++ b/dev-environment/admin/dev-settings.toml
@@ -23,6 +23,7 @@ OPTIONAL_APPS = [
     'django_extensions',
     'os2datascanner.projects.admin.core',
     'os2datascanner.projects.admin.organizations',
+    'os2datascanner.projects.admin.import_services',
 ]
 
 # [scans]
