--- a/requirements/python-requirements/requirements-report.txt
+++ b/requirements/python-requirements/requirements-report.txt
@@ -4,10 +4,15 @@
 #
 #    pip-compile requirements-report.in
 #
+aioredis==1.3.1
+    # via channels-redis
 asgiref==3.3.1
     # via
     #   channels
+    #   channels-redis
     #   daphne
+async-timeout==3.0.1
+    # via aioredis
 attrs==20.3.0
     # via
     #   automat
@@ -38,8 +43,12 @@ cffi==1.14.0
     #   -c requirements-engine.txt
     #   cryptography
     #   google-crc32c
-channels==3.0.3
+channels-redis==3.2.0
     # via -r requirements-report.in
+channels==3.0.3
+    # via
+    #   -r requirements-report.in
+    #   channels-redis
 chardet==3.0.4
     # via
     #   -c requirements-engine.txt
@@ -149,6 +158,8 @@ googleapis-common-protos==1.52.0
     #   google-api-core
 gunicorn==20.0.4
     # via -r requirements-django.in
+hiredis==2.0.0
+    # via aioredis
 httplib2==0.18.1
     # via
     #   -c requirements-engine.txt
@@ -187,6 +198,8 @@ lxml==4.5.0
     #   xmlsec
 mozilla-django-oidc==1.2.4
     # via -r requirements-report.in
+msgpack==1.0.2
+    # via channels-redis
 ntlm-auth==1.4.0
     # via
     #   -c requirements-engine.txt
