--- a/requirements/python-requirements/requirements-admin.txt
+++ b/requirements/python-requirements/requirements-admin.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements-admin.in
 #
+asgiref==3.3.4
+    # via django
 backcall==0.1.0
     # via ipython
 beautifulsoup4==4.9.0
@@ -59,7 +61,7 @@ django-storages[google]==1.10.1
     # via -r requirements-django.in
 django-structlog==1.5.2
     # via -r requirements-django.in
-django==2.2.18
+django==3.2
     # via
     #   -r requirements-django.in
     #   django-model-utils
@@ -290,6 +292,8 @@ toml==0.10.1
     #   -r requirements-common.in
 traitlets==4.3.3
     # via ipython
+typing-extensions==3.7.4.3
+    # via asgiref
 tzlocal==2.0.0
     # via
     #   -c requirements-engine.txt
