--- a/requirements/python-requirements/requirements-report.txt
+++ b/requirements/python-requirements/requirements-report.txt
@@ -6,11 +6,12 @@
 #
 aioredis==1.3.1
     # via channels-redis
-asgiref==3.3.1
+asgiref==3.3.4
     # via
     #   channels
     #   channels-redis
     #   daphne
+    #   django
 async-timeout==3.0.1
     # via aioredis
 attrs==20.3.0
@@ -97,7 +98,7 @@ django-storages[google]==1.10.1
     # via -r requirements-django.in
 django-structlog==1.5.2
     # via -r requirements-django.in
-django==2.2.18
+django==3.2
     # via
     #   -r requirements-django.in
     #   channels
@@ -382,6 +383,8 @@ twisted[tls]==21.2.0
     # via daphne
 txaio==21.2.1
     # via autobahn
+typing-extensions==3.7.4.3
+    # via asgiref
 tzlocal==2.0.0
     # via
     #   -c requirements-engine.txt
