--- a/src/os2datascanner/projects/report/default-settings.toml
+++ b/src/os2datascanner/projects/report/default-settings.toml
@@ -41,6 +41,7 @@ OIDC_OP_LOGOUT_URL_METHOD = "os2datascanner.projects.report.reportapp.views.view
 # [installation]
 INSTALLED_APPS = [
     'channels',
+    'channels_redis',
     'django.contrib.admin',
     'django.contrib.auth',
     'django.contrib.contenttypes',
