[#40129] Disabled websockets and implemented Django Rest Framework and made a filter looking at the API

--- a/src/os2datascanner/projects/report/default-settings.toml
+++ b/src/os2datascanner/projects/report/default-settings.toml
@@ -42,6 +42,7 @@ OIDC_OP_LOGOUT_URL_METHOD = "os2datascanner.projects.report.reportapp.views.view
 INSTALLED_APPS = [
     'channels',
     'channels_redis',
+    'rest_framework',
     'django.contrib.admin',
     'django.contrib.auth',
     'django.contrib.contenttypes',
