[#43727] Set loglevel for engine components

--- a/src/os2datascanner/projects/report/default-settings.toml
+++ b/src/os2datascanner/projects/report/default-settings.toml
@@ -186,3 +186,8 @@ BUILD_DIR = ["*", "build"]
 VAR_DIR = ["*", "var"]
 LOGS_DIR = ["*", "var", "logs"]
 STATIC_ROOT = ["*", 'src', 'os2datascanner', 'projects', 'static', 'report']
+
+# loglevel for components from engine
+[log]
+log_path = ""
+log_level = "INFO"
