--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
       # to run the django tests.
       # THIS SHOULD NOT BE USED IN PRODUCTION!!!
       - ./dev-environment/postgres-initdb.d/50-add-createdb-permissions.sh:/docker-entrypoint-initdb.d/50-add-createdb-permissions.sh
-
+      - ./dev-environment/postgres-initdb.d/60-dummy-database.sqldump:/docker-entrypoint-initdb.d/60-dummy-database.sqldump
+      - ./dev-environment/postgres-initdb.d/60-dummy-database-import.sh:/docker-entrypoint-initdb.d/60-dummy-database-import.sh
   queue:
     # Normally, we expect the `rabbitmq` image. The -management images come
     # with a set of management plugins installed and enabled by default.
@@ -28,66 +29,17 @@ services:
       - "5672:5672"
       - "8030:15672"
 
-  admin_frontend:
+    
+  report_frontend:
     build:
       context: .
-      dockerfile: docker/admin/Dockerfile
+      dockerfile: docker/report/Dockerfile
       target: frontend
     volumes:
-      - ./src/os2datascanner/projects/admin/adminapp/static/src:/code/src/os2datascanner/projects/admin/adminapp/static/src
-      - frontend-bundles-admin:/code/src/os2datascanner/projects/admin/adminapp/static/dist/
+      - ./src/os2datascanner/projects/report/reportapp/static/src:/code/src/os2datascanner/projects/report/reportapp/static/src
+      - frontend-bundles-report:/code/src/os2datascanner/projects/report/reportapp/static/dist/
       - /code/frontend/mode_modules
-
-  report_frontend:
-     build:
-       context: .
-       dockerfile: docker/report/Dockerfile
-       target: frontend
-     volumes:
-       - ./src/os2datascanner/projects/report/reportapp/static/src:/code/src/os2datascanner/projects/report/reportapp/static/src
-       - frontend-bundles-report:/code/src/os2datascanner/projects/report/reportapp/static/dist/
-       - /code/frontend/mode_modules
-
-  admin_application:
-    build:
-      context: .
-      dockerfile: docker/admin/Dockerfile
-      target: application
-    command: [
-      "gunicorn",
-      "--config", "/code/docker/gunicorn-settings.py",
-      "--reload", # restart workers when code changes
-      "wsgi"
-    ]
-    environment:
-      - GUNICORN_WORKERS=2
-    volumes:
-      - frontend-bundles-admin:/code/src/os2datascanner/projects/admin/adminapp/static/dist/
-      - ./dev-environment/admin/dev-settings.toml:/user-settings.toml
-      - ./dev-environment/admin/.secret:/code/.secret
-      - ./src/os2datascanner:/code/src/os2datascanner
-    ports:
-      - "8020:5000"
-    depends_on:
-      - db
-      - admin_frontend
-      - queue
-
-  admin_collector:
-    build:
-      context: .
-      dockerfile: docker/admin/Dockerfile
-      target: application
-    entrypoint: []
-    command: python manage.py pipeline_collector
-    volumes:
-      - ./dev-environment/admin/dev-settings.toml:/user-settings.toml
-      - ./src/os2datascanner:/code/src/os2datascanner
-    depends_on:
-      - db
-      - admin_application
-      - queue
-
+   
   report_application:
     build:
       context: .
@@ -106,99 +58,6 @@ services:
       - report_frontend
       - queue
 
-  report_collector:
-    build:
-      context: .
-      dockerfile: docker/report/Dockerfile
-      target: application
-    entrypoint: []
-    command: python manage.py pipeline_collector
-    volumes:
-      - ./dev-environment/report/dev-settings.toml:/user-settings.toml
-      - ./src/os2datascanner:/code/src/os2datascanner
-    depends_on:
-      - db
-      - report_application
-      - queue
-
-  engine_explorer:
-    build:
-      context: .
-      dockerfile: docker/engine/Dockerfile
-      target: engine
-    command: explorer --enable-metrics
-    volumes:
-      - ./dev-environment/engine/dev-settings.toml:/user-settings.toml
-      - ./src/os2datascanner:/code/src/os2datascanner
-    depends_on:
-      - queue
-
-  engine_worker:
-    build:
-      context: .
-      dockerfile: docker/engine/Dockerfile
-      target: engine
-    command: worker --enable-metrics
-    volumes:
-      - ./dev-environment/engine/dev-settings.toml:/user-settings.toml
-      - ./src/os2datascanner:/code/src/os2datascanner
-    depends_on:
-      - queue
-
-  engine_exporter:
-    build:
-      context: .
-      dockerfile: docker/engine/Dockerfile
-      target: engine
-    command: exporter --enable-metrics
-    volumes:
-      - ./dev-environment/engine/dev-settings.toml:/user-settings.toml
-      - ./src/os2datascanner:/code/src/os2datascanner
-    depends_on:
-      - queue
-
-  api_server:
-    build:
-      context: .
-      dockerfile: docker/api/Dockerfile
-      target: application
-    command: [
-        "gunicorn",
-        "--config", "/code/docker/gunicorn-settings.py",
-        "--workers", "2", # only two workers in local dev - to save some resources
-        "--reload", # restart workers when code changes
-        "os2datascanner.server.wsgi"
-    ]
-    ports:
-      - "8070:5000"
-    volumes:
-      - ./dev-environment/api/dev-settings.toml:/user-settings.toml
-      - ./src/os2datascanner:/code/src/os2datascanner
-
-  swagger_ui:
-    image: swaggerapi/swagger-ui:v3.41.1
-    environment:
-      - SWAGGER_JSON_URL=http://localhost:8070/openapi.yaml
-    ports:
-      - "8075:8080"
-    depends_on:
-      - api_server
-
-  prometheus:
-    image: prom/prometheus
-    volumes:
-      - "./dev-environment/prometheus.yml:/etc/prometheus/prometheus.yml:ro"
-    ports:
-      - "8050:9090"
-
-  # default user is admin/admin
-  grafana:
-    image: grafana/grafana
-    volumes:
-      - "./dev-environment/grafana/datasources.yml:/etc/grafana/provisioning/datasources/datasources.yml:ro"
-      - "./dev-environment/grafana/dashboards:/etc/grafana/provisioning/dashboards:ro"
-    ports:
-      - "8060:3000"
 
   idp:
     image: magentalabs/simplesamlphp:2.0.0
@@ -215,139 +74,7 @@ services:
     ports:
       - "8080:8080"
 
-  postgres-keycloak:
-    image: postgres
-    environment:
-      POSTGRES_DB: keycloak
-      POSTGRES_USER: keycloak
-      POSTGRES_PASSWORD: keycloak
-    volumes:
-      - type: volume
-        source: knr-postgres-keycloak-volume
-        target: /var/lib/postgresql/data
-
-  localkeycloak.os2datascanner:
-    image: quay.io/keycloak/keycloak:12.0.0
-    # Ignore existing will not import if a realm of this name already exists
-    # For development you may use OVERWRITE_EXISTING which will drop & create
-    command: [ "-Dkeycloak.migration.strategy=IGNORE_EXISTING",
-               "-Djboss.socket.binding.port-offset=10" ,
-             ]
-    ports:
-      - 8090:8090
-    environment:
-      KEYCLOAK_USER: admin
-      KEYCLOAK_PASSWORD: admin
-      KEYCLOAK_IMPORT: /realm.json
-      # PROXY_ADDRESS_FORWARDING: "true"
-      DB_USER: keycloak
-      DB_PASSWORD: keycloak
-      DB_ADDR: postgres-keycloak
-      DB_DATABASE: keycloak
-      DB_SCHEMA: public
-      DB_VENDOR: POSTGRES
-    volumes:
-      - ./dev-environment/realm.json:/realm.json
-    depends_on:
-      - postgres-keycloak
-
-  ldap_server:
-    image: osixia/openldap
-    environment:
-      LDAP_ADMIN_PASSWORD: testMAG
-      LDAP_BASE_DN: dc=magenta,dc=test
-      LDAP_ORGANISATION: Magenta
-      LDAP_DOMAIN: magenta.test
-    ports:
-      - 389:389
-    volumes:
-      - ldap_data:/var/lib/ldap
-      - ldap_config:/etc/ldap/slapd.d
-
-  ldap_server_admin:
-    image: osixia/phpldapadmin
-    ports:
-    - 8100:80
-    environment:
-      PHPLDAPADMIN_LDAP_HOSTS: ldap_server
-      PHPLDAPADMIN_HTTPS: 'false'
-    depends_on:
-      - ldap_server
-
-x-disabled:
-  admin_cron:
-    build:
-      context: .
-      dockerfile: docker/admin/Dockerfile
-      target: application
-    entrypoint: []
-    command: supercronic /code/docker/crontab
-    volumes:
-      - ./dev-environment/admin/dev-settings.toml:/user-settings.toml
-      - ./src/os2datascanner:/code/src/os2datascanner
-    depends_on:
-      - db
-      - admin_application
-      - queue
-
-  report_cron:
-    build:
-      context: .
-      dockerfile: docker/report/Dockerfile
-      target: application
-    entrypoint: [ ]
-    command: supercronic /code/docker/crontab
-    volumes:
-      - ./dev-environment/report/dev-settings.toml:/user-settings.toml
-      - ./src/os2datascanner:/code/src/os2datascanner
-    depends_on:
-      - db
-      - report_application
-      - queue
-
-  engine_processor:
-    build:
-      context: .
-      dockerfile: docker/engine/Dockerfile
-      target: engine
-    command: processor --enable-metrics
-    volumes:
-      - ./dev-environment/engine/dev-settings.toml:/user-settings.toml
-      - ./src/os2datascanner:/code/src/os2datascanner
-    depends_on:
-      - queue
-
-  engine_matcher:
-    build:
-      context: .
-      dockerfile: docker/engine/Dockerfile
-      target: engine
-    command: matcher --enable-metrics
-    restart: unless-stopped
-    volumes:
-      - ./dev-environment/engine/dev-settings.toml:/user-settings.toml
-      - ./src/os2datascanner:/code/src/os2datascanner
-    depends_on:
-      - queue
-
-  engine_tagger:
-    build:
-      context: .
-      dockerfile: docker/engine/Dockerfile
-      target: engine
-    command: tagger --enable-metrics
-    volumes:
-      - ./dev-environment/engine/dev-settings.toml:/user-settings.toml
-      - ./src/os2datascanner:/code/src/os2datascanner
-    depends_on:
-      - queue
-
-
 volumes:
-  frontend-bundles-admin:
   frontend-bundles-report:
   postgres-data:
   postgres-initdb.d:
-  knr-postgres-keycloak-volume:
-  ldap_data:
-  ldap_config:
