[#43794] Set loglevel globally

--- a/src/os2datascanner/server/default-settings.toml
+++ b/src/os2datascanner/server/default-settings.toml
@@ -5,4 +5,8 @@ permitted_sources = ["data", "web"]
 # The RFC 6750-style bearer token that must be included (in the "Authorization"
 # header) in all requests to the API host. If this value is empty, the API host
 # will reject all incoming requests
-token = ""
+token = "os2ds"
+
+[log]
+log_path = ""
+log_level = "INFO"
