[#44068] Set loglevel to INFO globally

--- a/src/os2datascanner/projects/admin/default-settings.toml
+++ b/src/os2datascanner/projects/admin/default-settings.toml
@@ -206,3 +206,7 @@ LOGS_DIR = ["*", "var", "logs"]
 STATIC_ROOT = ["*", 'src', 'os2datascanner', 'projects', 'static', 'admin']
 MEDIA_ROOT = ["*", "uploads", "admin"]
 TEST_OUTPUT_FILE_NAME = ["*", "build", "test-results.xml"]
+
+[log]
+log_path = ""
+log_level = "INFO"
