[#40129] Added redis server and changed Channels to use redis instead of InMemory, which can't be used in production.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,13 @@ services:
       - queue
 
 
+  redis:
+    restart: always
+    image: redis:latest
+    expose:
+      - "6379"
+
+
   idp:
     image: magentalabs/simplesamlphp:2.0.0
     environment:
