--- a/requirements/python-requirements/requirements-report.in
+++ b/requirements/python-requirements/requirements-report.in
@@ -1,5 +1,7 @@
 -r requirements-django.in
 -c requirements-engine.txt
+channels
+channels_redis
 mozilla-django-oidc
 git+https://github.com/magenta-aps/django-saml2-auth.git@2.3.0
 pysaml2>=5.3.0,<6.0.0
