--- a/requirements/python-requirements/requirements-report.txt
+++ b/requirements/python-requirements/requirements-report.txt
@@ -4,8 +4,24 @@
 #
 #    pip-compile requirements-report.in
 #
+aioredis==1.3.1
+    # via channels-redis
 asgiref==3.3.4
-    # via django
+    # via
+    #   channels
+    #   channels-redis
+    #   daphne
+async-timeout==3.0.1
+    # via aioredis
+attrs==21.2.0
+    # via
+    #   automat
+    #   service-identity
+    #   twisted
+autobahn==21.2.1
+    # via daphne
+automat==20.2.0
+    # via twisted
 backcall==0.1.0
     # via ipython
 beautifulsoup4==4.9.0
@@ -27,6 +43,12 @@ cffi==1.14.0
     #   -c requirements-engine.txt
     #   cryptography
     #   google-crc32c
+channels-redis==3.2.0
+    # via -r requirements-report.in
+channels==3.0.3
+    # via
+    #   -r requirements-report.in
+    #   channels-redis
 chardet==3.0.4
     # via
     #   -c requirements-engine.txt
@@ -39,14 +61,20 @@ colorama==0.4.3
     # via
     #   -c requirements-engine.txt
     #   -r requirements-common.in
+constantly==15.1.0
+    # via twisted
 cryptography==2.9.2
     # via
     #   -c requirements-engine.txt
+    #   autobahn
     #   josepy
     #   mozilla-django-oidc
     #   pyopenssl
     #   pysaml2
     #   requests-ntlm
+    #   service-identity
+daphne==3.0.2
+    # via channels
 decorator==4.4.2
     # via
     #   ipython
@@ -76,6 +104,7 @@ django-structlog==1.5.2
 django==3.2.4
     # via
     #   -r requirements-django.in
+    #   channels
     #   django-model-utils
     #   django-rest-auth
     #   django-settings-export
@@ -133,20 +162,30 @@ googleapis-common-protos==1.52.0
     #   google-api-core
 gunicorn==20.0.4
     # via -r requirements-django.in
+hiredis==2.0.0
+    # via aioredis
 httplib2==0.18.1
     # via
     #   -c requirements-engine.txt
     #   google-api-python-client
     #   google-auth-httplib2
     #   oauth2client
+hyperlink==21.0.0
+    # via
+    #   autobahn
+    #   twisted
 idna==2.9
     # via
     #   -c requirements-engine.txt
+    #   hyperlink
     #   requests
+    #   twisted
 importlib-metadata==4.5.0
     # via
     #   -c requirements-engine.txt
     #   click
+incremental==21.3.0
+    # via twisted
 ipython-genutils==0.2.0
     # via traitlets
 ipython==7.14.0
@@ -167,6 +206,8 @@ lxml==4.5.0
     #   xmlsec
 mozilla-django-oidc==1.2.4
     # via -r requirements-report.in
+msgpack==1.0.2
+    # via channels-redis
 ntlm-auth==1.4.0
     # via
     #   -c requirements-engine.txt
@@ -220,12 +261,14 @@ pyasn1-modules==0.2.8
     #   -c requirements-engine.txt
     #   google-auth
     #   oauth2client
+    #   service-identity
 pyasn1==0.4.8
     # via
     #   -c requirements-engine.txt
     #   oauth2client
     #   pyasn1-modules
     #   rsa
+    #   service-identity
 pycparser==2.20
     # via
     #   -c requirements-engine.txt
@@ -241,6 +284,7 @@ pyopenssl==19.1.0
     # via
     #   josepy
     #   pysaml2
+    #   twisted
 pypdf2==1.26.0
     # via
     #   -c requirements-engine.txt
@@ -302,9 +346,12 @@ rsa==4.6
     #   -c requirements-engine.txt
     #   google-auth
     #   oauth2client
+service-identity==21.1.0
+    # via twisted
 six==1.14.0
     # via
     #   -c requirements-engine.txt
+    #   automat
     #   cryptography
     #   django-extensions
     #   django-rest-auth
@@ -322,6 +369,7 @@ six==1.14.0
     #   pyopenssl
     #   pysaml2
     #   python-dateutil
+    #   service-identity
     #   structlog
     #   traitlets
 soupsieve==2.0
@@ -339,6 +387,10 @@ toml==0.10.1
     #   -r requirements-common.in
 traitlets==4.3.3
     # via ipython
+twisted[tls]==21.2.0
+    # via daphne
+txaio==21.2.1
+    # via autobahn
 typing-extensions==3.10.0.0
     # via
     #   -c requirements-engine.txt
@@ -366,6 +418,8 @@ zipp==3.4.1
     # via
     #   -c requirements-engine.txt
     #   importlib-metadata
+zope.interface==5.4.0
+    # via twisted
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
