--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,14 +107,7 @@ services:
       context: .
       dockerfile: docker/report/Dockerfile
       target: application
-    command: [
-      "gunicorn",
-      "--config", "/code/docker/gunicorn-settings.py",
-      "--reload", # restart workers when code changes
-      "wsgi"
-    ]
-    environment:
-      - GUNICORN_WORKERS=2
+    command: uvicorn --host 0.0.0.0 --port 5000 --ws websockets --reload os2datascanner.projects.report.asgi:application
     volumes:
       - frontend-bundles-report:/code/src/os2datascanner/projects/report/reportapp/static/dist/
       - ./dev-environment/report/dev-settings.toml:/user-settings.toml
