--- a/requirements/python-requirements/requirements-report.txt
+++ b/requirements/python-requirements/requirements-report.txt
@@ -11,6 +11,8 @@ asgiref==3.3.4
     #   channels
     #   channels-redis
     #   daphne
+    #   django
+    #   uvicorn
 async-timeout==3.0.1
     # via aioredis
 attrs==21.2.0
@@ -57,6 +59,7 @@ click==8.0.1
     # via
     #   -c requirements-engine.txt
     #   -r requirements-common.in
+    #   uvicorn
 colorama==0.4.3
     # via
     #   -c requirements-engine.txt
@@ -162,6 +165,8 @@ googleapis-common-protos==1.52.0
     #   google-api-core
 gunicorn==20.0.4
     # via -r requirements-django.in
+h11==0.12.0
+    # via uvicorn
 hiredis==2.0.0
     # via aioredis
 httplib2==0.18.1
@@ -170,6 +175,8 @@ httplib2==0.18.1
     #   google-api-python-client
     #   google-auth-httplib2
     #   oauth2client
+httptools==0.2.0
+    # via uvicorn
 hyperlink==21.0.0
     # via
     #   autobahn
@@ -278,6 +285,8 @@ pygments==2.6.1
     #   -c requirements-engine.txt
     #   exchangelib
     #   ipython
+pyhamcrest==2.0.2
+    # via twisted
 pyjwt==1.7.1
     # via djangorestframework-jwt
 pyopenssl==19.1.0
@@ -302,6 +311,8 @@ python-dateutil==2.8.1
     #   -c requirements-engine.txt
     #   exchangelib
     #   pysaml2
+python-dotenv==0.18.0
+    # via uvicorn
 python-magic==0.4.18
     # via
     #   -c requirements-engine.txt
@@ -316,6 +327,8 @@ pytz==2019.3
     #   google-api-core
     #   pysaml2
     #   tzlocal
+pyyaml==5.4.1
+    # via uvicorn
 randomtimestamp==1.0.0
     # via -r requirements-report.in
 regex==2020.4.4
@@ -387,7 +400,7 @@ toml==0.10.1
     #   -r requirements-common.in
 traitlets==4.3.3
     # via ipython
-twisted[tls]==21.2.0
+twisted[tls]==20.3.0
     # via daphne
 txaio==21.2.1
     # via autobahn
@@ -396,6 +409,7 @@ typing-extensions==3.10.0.0
     #   -c requirements-engine.txt
     #   asgiref
     #   importlib-metadata
+    #   uvicorn
 tzlocal==2.0.0
     # via
     #   -c requirements-engine.txt
@@ -408,8 +422,16 @@ urllib3==1.25.9
     # via
     #   -c requirements-engine.txt
     #   requests
+uvicorn[standard]==0.14.0
+    # via -r requirements-django.in
+uvloop==0.14.0
+    # via uvicorn
+watchgod==0.7
+    # via uvicorn
 wcwidth==0.1.9
     # via prompt-toolkit
+websockets==9.1
+    # via uvicorn
 whitenoise==5.2.0
     # via -r requirements-django.in
 xmlsec==1.3.3
