--- a/src/os2datascanner/projects/admin/default-settings.toml
+++ b/src/os2datascanner/projects/admin/default-settings.toml
@@ -64,6 +64,7 @@ INSTALLED_APPS = [
     'recurrence',
     'mptt',
     'django_extensions',
+    'rest_framework',
 ]
 OS2DATASCANNER_APPS = [
     'os2datascanner.projects.admin.adminapp',
