[#42385] Added tab in admin app for MS Teams Scanner.

--- a/src/os2datascanner/projects/admin/default-settings.toml
+++ b/src/os2datascanner/projects/admin/default-settings.toml
@@ -136,6 +136,7 @@ SETTINGS_EXPORT = [
     'ENABLE_GOOGLEDRIVESCAN',
     'ENABLE_GMAILSCAN',
     'ENABLE_SBSYSSCAN',
+    'ENABLE_MSGRAPH_TEAMSSCAN',
     'ICON_SPRITE_URL',
     'ESTIMATE_AFTER'
 ]
@@ -177,6 +178,7 @@ ENABLE_MSGRAPH_CALENDARSCAN = false
 ENABLE_GOOGLEDRIVESCAN = false
 ENABLE_GMAILSCAN = false
 ENABLE_SBSYSSCAN = false
+ENABLE_MSGRAPH_TEAMSSCAN = true
 
 # [logging]
 DJANGO_LOG_LEVEL = "INFO"
