[#49435] Delegate matches to other users.
[#49435] Mass handling support.

[#49435] Specifiy user to assign to.

[#49435] Hide delegate button if no aliases exist.

[#49435] Only allow some users to delegate matches.

[#49435] Added setting for turning functionality on or off.

--- a/src/os2datascanner/projects/report/default-settings.toml
+++ b/src/os2datascanner/projects/report/default-settings.toml
@@ -19,6 +19,9 @@ DEBUG = false
 KEYCLOAK_ENABLED = false
 SAML2_ENABLED = false
 
+# [functionality]
+DELEGATE_MATCHES = false
+
 # [site]
 # The URL of this site, used in links in emails and in the redirect URL for
 # OAuth 2.0 services. (This value should end with a forward slash.)
@@ -103,8 +106,11 @@ MIDDLEWARE = [
     "django_prometheus.middleware.PrometheusAfterMiddleware",
 ]
 
+X_FRAME_OPTIONS = 'SAMEORIGIN'
+
 SETTINGS_EXPORT = [
     'DEBUG',
+    'DELEGATE_MATCHES'
 ]
 
 # [internationalization]
