--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -10,7 +10,7 @@
 # Labs as required approval to your MR if you have any changes.                #
 ################################################################################
 
-FROM python:3.9.7 AS application
+FROM python:3.9.7-slim AS application
 
 LABEL org.opencontainers.image.title="OS2datascanner - API" \
       org.opencontainers.image.vendor="Magenta ApS" \
