--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -52,8 +52,11 @@ RUN set -ex \
   && apt-get -y update \
   && apt-get -y install --no-install-recommends $(grep -oh '^[^#][[:alnum:].-]*' sys-requirements/sys-requirements*.txt) \
   # clean up after apt-get and man-pages
-  && apt-get clean && rm -rf "/var/lib/apt/lists/*" "/tmp/*" "/var/tmp/*" "/usr/share/man/??" "/usr/share/man/??_*" \
-  && find python-requirements/requirements*.txt -print0 | xargs -0 -n1 pip install -r \
+  && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* /usr/share/man/?? /usr/share/man/??_* \
+  # Install python dependencies and clean up build dependencies
+  && pip install --no-cache-dir -r python-requirements/requirements-api.txt \
+                                -r python-requirements/requirements-test.txt \
+                                -r python-requirements/requirements-lint.txt \
   && apt-get -y remove $(grep -oh '^[^#][[:alnum:].-]*' sys-requirements/sys-requirements-build.txt) \
   && apt-get -y autoremove
 
