--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -212,12 +212,10 @@ Integration Test Admin Application:
   rules:
     - when: never  # until 53346 is fixed 
   services:
-    - name: egnmagenta/os2datasynth:v0.2.5
-      alias: datasynth
-      variables:
-       DATASYNTH_HOST: "datasynth"
     - rabbitmq:3.8-alpine
     - postgres:12
+    - name: nginx
+      alias: nginx
     - name: magentalabs/samba-test:1.1
       alias: samba
     - name: ${ENGINE_IMAGE}
@@ -241,7 +239,6 @@ Integration Test Admin Application:
     POSTGRES_PASSWORD: os2datascanner
     COVERAGE_FILE: /tmp/.coverage
     FF_NETWORK_PER_BUILD: "true"
-    DATASYNTH_HOST: "datasynth"
     OS2DS_ENGINE_USER_CONFIG_PATH: ${CI_PROJECT_DIR}/dev-environment/engine/test-settings.toml
   needs:
     - Build Admin Application
@@ -431,19 +428,23 @@ Integration Test Report Application:
     - docker
     - network-per-build
   services:
-    - name: egnmagenta/os2datasynth:v0.2.5
-      alias: datasynth
-      variables:
-        DATASYNTH_HOST: "datasynth"
     - rabbitmq:3.8-alpine
     - postgres:12
     - name: ${API_IMAGE}
       alias: api_server
+    - name: nginx
+    - name: magentalabs/samba-test:1.1
+      alias: samba
   variables:
+    SMB_USER: os2
+    SMB_PASSWD: 12345_rosebud_password_admin
+    SMB_SHARE_NAME: general
+    SMB_SHARE_PATH: ${CI_PROJECT_DIR}/src/os2datascanner/engine2/tests/data/engine2
+    SMB_SHARE_BROWSABLE: "no"
+    SMB_SHARE_READONLY: "yes"
     POSTGRES_DB: os2datascanner
     POSTGRES_USER: os2datascanner
     POSTGRES_PASSWORD: os2datascanner
-    DATASYNTH_HOST: "datasynth"
     server__token: 'thisIsNotASecret'
     FF_NETWORK_PER_BUILD: "true"
     OS2DS_SERVER_USER_CONFIG_PATH: ${CI_PROJECT_DIR}/dev-environment/api/dev-settings.toml
@@ -486,9 +487,8 @@ Run Engine notice scripts:
     - Unit Test Engine
     - Integration Test Engine
     - Unit Test Report Application
-    # No point in waiting for jobs that always fail...
-    #- Integration Test Admin Application
-    #- Integration Test Report Application
+    # No point in waiting ages for job that is always failing
+    - Integration Test Report Application
   image: alpine
   variables:
     GIT_STRATEGY: none # We do not need the source code
