--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,12 +3,10 @@ repos:
     rev: 'v1.5.7'
     hooks:
     - id: autopep8
--   repo: https://github.com/pycqa/flake8
-    rev: 3.9.2
+-   repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: 'v0.0.259'
     hooks:
-    - id: flake8
-      entry: pflake8 src
-      additional_dependencies: [pyproject-flake8, flake8-cognitive-complexity, flake8-expression-complexity, flake8-bugbear]
+    -   id: ruff
 -   repo: https://github.com/pre-commit/mirrors-jshint
     rev: 'v2.13.0'
     hooks:
