[#41817] Extend the admin system with optional single-file scan support
The administration system has responsibility for every part of this: the
pipeline is executed and its results visualised inside a Django view. It
might be nice to make this into a client of the API server in future, but
for now I just wanted something to work reasonably quickly

--- a/dev-environment/admin/dev-settings.toml
+++ b/dev-environment/admin/dev-settings.toml
@@ -54,6 +54,9 @@ ENABLE_MSGRAPH_FILESCAN = true
 ENABLE_MSGRAPH_CALENDARSCAN = true
 ENABLE_SBSYSSCAN = true
 
+ENABLE_MINISCAN = true
+MINISCAN_REQUIRES_LOGIN = false
+
 # [email]
 DEFAULT_FROM_EMAIL = "os2datascanner@magenta.dk"
 ADMIN_EMAIL = "os2datascanner@magenta.dk"
