--- a/src/os2datascanner/engine2/default-settings.toml
+++ b/src/os2datascanner/engine2/default-settings.toml
@@ -45,3 +45,6 @@ page_size = 100
 
 # The time to spend waiting for an API response to begin (in seconds)
 timeout = 30
+
+[openai]
+OPENAI_API_KEY = ""
