[#56492] Mutation testing with mutmut

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,3 +54,8 @@ skip_covered = True
 exclude_lines =
      raise NotImplementedError
      \bpass\b
+
+[mutmut]
+paths_to_mutate=src/os2datascanner/projects/report/
+tests_dir=src/os2datascanner/projects/report/tests/
+runner=docker-compose exec report django-admin test os2datascanner.projects.report.tests
