[#53733] MS Teams scan UI

--- a/dev-environment/admin/dev-settings.toml
+++ b/dev-environment/admin/dev-settings.toml
@@ -54,6 +54,7 @@ ENABLE_GMAILSCAN = true
 ENABLE_MSGRAPH_MAILSCAN = true
 ENABLE_MSGRAPH_FILESCAN = true
 ENABLE_MSGRAPH_CALENDARSCAN = true
+ENABLE_MSGRAPH_TEAMS_FILESCAN = true
 ENABLE_SBSYSSCAN = true
 
 ENABLE_MINISCAN = true
