--- a/src/os2datascanner/projects/admin/default-settings.toml
+++ b/src/os2datascanner/projects/admin/default-settings.toml
@@ -155,6 +155,7 @@ SETTINGS_EXPORT = [
     'ENABLE_MSGRAPH_MAILSCAN',
     'ENABLE_MSGRAPH_FILESCAN',
     'ENABLE_MSGRAPH_CALENDARSCAN',
+    'ENABLE_MSGRAPH_TEAMS_FILESCAN',
     'ENABLE_GOOGLEDRIVESCAN',
     'ENABLE_GMAILSCAN',
     'ENABLE_SBSYSSCAN',
@@ -201,6 +202,7 @@ ENABLE_DROPBOXSCAN = false
 ENABLE_MSGRAPH_MAILSCAN = false
 ENABLE_MSGRAPH_FILESCAN = false
 ENABLE_MSGRAPH_CALENDARSCAN = false
+ENABLE_MSGRAPH_TEAMS_FILESCAN = false
 ENABLE_GOOGLEDRIVESCAN = false
 ENABLE_GMAILSCAN = false
 ENABLE_SBSYSSCAN = false
